--- a/accests/css/game.css
+++ b/accests/css/game.css
@@ -77,7 +77,7 @@ body {
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
     .box {
         height: 30px;
         width: 30px;
@@ -89,8 +89,8 @@ body {
     }
     #grid-container {
 
-        grid-template-columns: repeat(auto-fill, minmax(10px, 1fr));
-        gap: 30px;
+        grid-template-columns: max-content;
+        gap: 5px;
    
     }
 }
