--- a/accests/css/game.css
+++ b/accests/css/game.css
@@ -52,8 +52,9 @@ body {
 
 #grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+    grid-template-columns: max-content;
     gap: 5px;
+
     justify-content: center;
     margin: 0 auto;
     max-width: 100%;
@@ -63,6 +64,42 @@ body {
     display: none;
     text-align: center;
     margin-top: 20px;
+}
+#bomb-effect {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+#bomb-effect .bomb-image {
+    width: 400px; /* Adjust the size of the bomb image */
+    height: 400px; /* Adjust the size of the bomb image */
+    background: url('/accests/images/blast1.png') no-repeat center center;
+    background-size: cover;
+    animation: blast 3s ease-out forwards;
+}
+
+
+@keyframes blast {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.5);
+        opacity: 0.5;
+    }
+    100% {
+        transform: scale(3);
+        opacity: 0;
+    }
 }
 
 @media (max-width: 600px) {
@@ -87,10 +124,5 @@ body {
         width: 25px;
         height: 25px;
     }
-    #grid-container {
 
-        grid-template-columns: max-content;
-        gap: 5px;
-   
-    }
 }
